[tool.poetry]
name = "familytree"
version = "0.1.0"
description = "A website for storing, browsing, and updating a family tree."
authors = ["Hassan Umari <oh91@windowslive.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.2,<5.0"
django-registration = ">=3.3,<4.0"
wagtail = ">=5.1,<6.0"
wand = "0.6"
graphene-django = ">=3.1,<4.0"
gunicorn = ">=21.2,<22.0"


[tool.poetry.group.dev.dependencies]
yapf = "0.40.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
